--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,18 +182,20 @@ body,html{height: 100%;}
 
 /* Beginning header style */
 .main-header-section {background: transparent;position: fixed; z-index: 1111; float: left; width: 100%; padding: 40px 0; top: 0; }
-.header-inner {  float: left;  width: 100%; display: flex; justify-content: space-between; align-items: center;}
+.header-inner {  float: left;  width: 100%; display: flex; justify-content: space-between; align-items: end;}
 .main-logo{float: left; width:100%; height: auto; }
 .phone-nav{position: relative; right: 0px; top:5px; width: 24px; display: none;}
 .phone-nav div{float: left; width: 100%; height: 2px;  background: #ffffff; margin: 3px 0;}
 .main-nav{float: right; width: 100%; }
-
+.main-nav .search-btn a{
+	position: relative;
+}
 .main-nav ul li{display: inline-block; margin: 0 14px;}
 .main-nav ul li:last-child,  .footer-nav ul li:last-child{margin-right: -2px;}
-.main-nav ul li a {display: block;text-transform: uppercase;color: #ffffff; padding: 10px 0; position: relative; font-size: 24px; text-transform: capitalize; line-height: 32px;  
+.main-nav ul li a {display: block;text-transform: uppercase;color: #ffffff; position: relative; font-size: 24px; text-transform: capitalize; line-height: 32px;  
  font-family: 'RobotoMedium',sans-serif; font-weight: 500;}
-.main-nav ul li a:after{position: absolute; left: 0; bottom: 0; width: 0; height: 5px; background: #fff; content: ""; -webkit-transition: all .3s ease-in; -moz-transition: all .3s ease-in; transition: all .3s ease-in;}
-.main-nav > ul > li:hover > a:after, .main-nav > ul > li.current-menu-item > a:after{width: 100%;}
+.main-nav ul li a:after, .main-nav .search-btn a::after{position: absolute; left: 0; bottom: -5px; width: 0; height: 5px; background: #fff; content: ""; -webkit-transition: all .3s ease-in; -moz-transition: all .3s ease-in; transition: all .3s ease-in;}
+.main-nav > ul > li:hover > a::after,.main-nav .search-btn:hover > a::after, .main-nav > ul > li.current-menu-item > a:after{width: 100%;}
 
 .logo-wrap { display: flex; align-items: center;justify-content: flex-start;width: 413px;}
 .top-menu { display: flex;justify-content: flex-end;padding: 10px 20px; width: 100%; float: left;}
@@ -209,21 +211,35 @@ body,html{height: 100%;}
 .main-nav ul li {margin: 0;}
 .main-nav ul li a img {margin-right: 5px; width: 30px;}
 header.main-header-section.sticky{background-color: #212936;}
+header.main-header-section.sticky .header-inner{
+	align-items: center;
+}
 header.main-header-section.sticky .top-menu{display: none;}
 
 /* //End header style */
 
 
 
-.hero-bg-wrap{float: left;width: 100%; height: 900px; display: flex; align-items: center; justify-content: center;}
+.hero-bg-wrap{float: left;width: 100%;height: 938px;display: flex;align-items: center;justify-content: center;}
 .hero-thumb{position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 .hero-inner {  float: left; width: 100%;  position: relative; z-index: 1;}
 .hero-info { max-width: 1366px;  margin: 0 auto; padding: 0 20px;}
 .hero-info h1{text-align: right; font-size: 60px; line-height: normal; color: #fff; padding-bottom: 35px; }
 .counter-item { float: left; width: 22%;}
-.counter-wrap { width: 1550px; opacity: 0.9864; background: linear-gradient(180deg, #37A9B6 100.66%, #00B9CA 26.42%);
-    position: absolute; right: 0; bottom: 85px; padding: 30px; display: flex; gap: 6%; padding-left: 100px; align-items: center;}
-.counter-item span{display: block; color: #FFF;text-align: center;  font-family: 'BarlowSemiBold'; font-size: 130px;font-style: normal;font-weight: 600;line-height: normal}
+.counter-wrap {
+    width: 1550px;
+    opacity: 0.9864;
+    background: linear-gradient(180deg, #37A9B6 100.66%, #00B9CA 26.42%);
+    position: absolute;
+    right: 0;
+    bottom: 65px;
+    padding: 30px;
+    display: flex;
+    gap: 6%;
+    padding-left: 100px;
+    align-items: start;
+    }
+.counter-item span{display: block;color: #FFFFFF;text-align: center;font-family: 'BarlowSemiBold';font-size: 130px;font-style: normal;font-weight: 600;line-height: normal}
 .counter-item dfn {color: #FFF;text-align: center;font-family: 'BarlowBold',sans-serif;font-size: 38px;font-style: normal;font-weight: 700; line-height: normal; display:block ;}
  
 .hero-thumb img {
@@ -232,7 +248,21 @@ header.main-header-section.sticky .top-menu{display: none;}
     width: 100%;
     height: 100%;
 }
-.go-brand-wrap{float: left; width: 100%; padding: 64px 0 134px;}
+.go-brand-wrap{
+	position:relative;
+	float: left;width: 100%;padding: 64px 0 134px;}
+
+.go-brand-wrap::before{
+	position:absolute;
+	top:0;
+	left:0;
+	content:"";
+	width:50%;
+	height:10px;
+	background:#0099A9;
+	display:block;
+	z-index:99;
+}
 
 .brand-text-inner {
     float: left;
@@ -253,12 +283,15 @@ header.main-header-section.sticky .top-menu{display: none;}
 	font-weight: 500;
 	line-height: 78px;}
 
-.left-content p{color: #37A9B6; padding-top: 43px;
+.left-content p{
+    color: #37A9B6;
+    padding-top: 37.76px;
     font-family: 'BarlowMedium',sans-serif;
-	font-size: 50px;
-	font-style: normal;
-	font-weight: 500;
-	line-height: 60px;}	
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60px;
+    }	
 
 .right-content{width: 41.714286%; float: left;}
 .go-brand-wrap:after {
@@ -272,7 +305,7 @@ header.main-header-section.sticky .top-menu{display: none;}
     z-index: -1;
 }
 
-.right-content img{width: 68px;}
+.right-content img{width: 68px;transform: translateX(-50%);}
 .right-content p{color: #666; padding-top: 15px;
 	font-size: 32px;
 	font-style: normal;
@@ -751,7 +784,6 @@ span.posted-on{padding-top:20px	}
     display: block;
     text-transform: uppercase;
     color: #ffffff;
-    padding: 10px 0;
     position: relative;
     font-size: 24px;
     text-transform: capitalize;
@@ -774,6 +806,7 @@ span.posted-on{padding-top:20px	}
     line-height: normal;
     display: block;}
 
+.main-nav .search-btn{width: 145px;}
 .main-nav .search-btn a{display: flex;  gap: 15px;}
  
 .address-text ul li a{
@@ -785,7 +818,7 @@ span.posted-on{padding-top:20px	}
     line-height: 26px;
 }
 
-section.hero-bg-wrap:after {
+/* section.hero-bg-wrap:after {
     content: '';
     position: absolute;
     background: #000;
@@ -794,7 +827,7 @@ section.hero-bg-wrap:after {
     height: 100%;
     top: 0;
     left: 0;
-}
+} */
 
 
 /* =======================================================================================================
@@ -823,6 +856,25 @@ section.hero-bg-wrap:after {
         height: 100vh;
         overflow-y: scroll;
         background-color: #212936;}
+		.main-nav ul li a:after, .main-nav .search-btn a::after{display: none; width: 0;}
+	.main-logo img{
+		width: 180px;
+	}
+
+		.main-nav{
+			margin-top: 20px;
+		}
+
+		.main-nav ul{text-align: center;  flex-direction: column; gap:10px; margin-bottom:12px;}
+		.main-nav .search-btn{
+			width: 128px ;
+		}
+
+		.main-nav .search-btn a{align-items: center;}
+		.main-nav .search-btn img{width: 25px; height: 25px;}
+
+
+
 
 	.main-nav ul{text-align: center;  flex-direction: column;
 	}
@@ -967,7 +1019,22 @@ a.btn.why-btn {font-size: 22px;}
 */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+	.main-nav{
+		margin-top: 30px;
+	}
 
+	.main-logo img{
+		width: 190px;
+	}
+
+
+	.main-nav ul{text-align: center;  flex-direction: column; gap:10px; margin-bottom:12px;}
+	.main-nav .search-btn{
+		width: 128px ;
+	}
+
+	.main-nav .search-btn a{align-items: center;}
+	.main-nav .search-btn img{width: 25px; height: 25px;}
 
 }
 
@@ -987,6 +1054,9 @@ a.btn.why-btn {font-size: 22px;}
 	.header-inner{padding: 0;    flex-flow: row wrap;}
 	.logo-wrap{float: left; width: 100%; justify-content: space-between; position: relative; padding-top: 20px;
         z-index: 11;}
+
+		.main-nav ul li a:after, .main-nav .search-btn a::after{display: none; width: 0;}
+
 	.main-logo{width: 230px;}
 	.phone-nav{display: flex; -webkit-transition: .5s ease-in-out; -moz-transition: .5s ease-in-out; transition: .5s ease-in-out; align-items: center; }
 	.nav-wrap{background: #ffffff; box-shadow: 0 1px 10px 0px rgba(0, 0, 0, .3); display: none;}
@@ -998,6 +1068,23 @@ a.btn.why-btn {font-size: 22px;}
         height: 100vh;
         overflow-y: scroll;
         background-color: #212936;}
+
+		.main-logo img{
+			width: 220px;
+		}
+	
+
+		.main-nav{
+			margin-top: 50px;
+		}
+
+		.main-nav ul{text-align: center;  flex-direction: column; gap:10px; margin-bottom:12px;}
+		.main-nav .search-btn{
+			width: 128px ;
+		}
+
+		.main-nav .search-btn a{align-items: center;}
+		.main-nav .search-btn img{width: 25px; height: 25px;}
 
 	.main-nav ul{text-align: center;  flex-direction: column;
 	}
@@ -1147,7 +1234,7 @@ a.btn.why-btn {font-size: 22px;}
 @media only screen and (min-width: 992px) and (max-width: 1024px) {
     input[type="text"],input[type="email"],input[type="tel"],input[type="search"],input[type="number"],input[type="submit"],input[type="password"],select,textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none;}
 	
-
+	.main-nav ul li a:after, .main-nav .search-btn a::after{display: none; width: 0;}
 
 	/* Menu style */
 	.main-header-section{background: transparent; position: fixed; left: 0; top: 1px; margin-top: -1px; z-index: 999;}
@@ -1156,6 +1243,9 @@ a.btn.why-btn {font-size: 22px;}
         z-index: 11;}
 	.main-logo{width: 230px;}
 	.phone-nav{display: flex; -webkit-transition: .5s ease-in-out; -moz-transition: .5s ease-in-out; transition: .5s ease-in-out; align-items: center; }
+	.main-nav{
+		margin-top: 50px;
+	}
 	.nav-wrap{background: #ffffff; box-shadow: 0 1px 10px 0px rgba(0, 0, 0, .3); display: none;}
 	.nav-wrap{  padding: 120px 20px;
         position: fixed;
@@ -1166,8 +1256,13 @@ a.btn.why-btn {font-size: 22px;}
         overflow-y: scroll;
         background-color: #212936;}
 
-	.main-nav ul{text-align: center;  flex-direction: column;
-	}
+		.main-nav ul{text-align: center;  flex-direction: column; gap:10px; margin-bottom:12px;}
+		.main-nav .search-btn{
+			width: 128px ;
+		}
+
+		.main-nav .search-btn a{align-items: center;}
+		.main-nav .search-btn img{width: 25px; height: 25px;}
 	.main-nav ul li{float: left; width: 100%; margin: 0;}
 	.main-nav ul li a{display: inline-block; color: #fff;}
 	.nav-expand .nav-wrap{display: block; transform: translateX(0); overflow-y: scroll;}
